made a simple html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <body>
       <p>
         So here we are again back at out coding.Today all we are gonna do is make a javascript
-        file in visual studio code ,so lets get started.
+        file in visual studio code ,so lets get started shall we.
       </p>
       <scrpit src = "./index.js"></scrpit>
     
